refactor: use sqlite db

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,7 @@
       "type": "node",
       "request": "launch",
 
-      // Debug current file in VSCode
-      "program": "${file}",
+      "program": "${workspaceFolder}/src/index.ts",
 
       /*
        * Path to tsx binary
