--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "text-embeddings-prototype",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsx --no-warnings --env-file=.env index.ts"
+    "start": "tsx --no-warnings --env-file=.env src/index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:reset": "tsx --no-warnings --env-file=.env src/db/reset.ts",
+    "db:seed": "tsx --no-warnings --env-file=.env src/db/seed.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "drizzle-kit": "^0.30.2",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "packageManager": "pnpm@9.12.3",
   "dependencies": {
+    "@libsql/client": "^0.14.0",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
+    "drizzle-orm": "^0.38.4",
+    "drizzle-seed": "^0.3.0",
     "openai": "^4.78.1"
   }
 }
