--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,41 @@
 {
   "configurations": [
     {
-      "name": "tsx",
+      "name": "Run application",
       "type": "node",
       "request": "launch",
 
       "program": "${workspaceFolder}/src/index.ts",
+
+      /*
+       * Path to tsx binary
+       * Assuming locally installed
+       */
+      "runtimeExecutable": "tsx",
+      "runtimeArgs": ["--env-file=.env"],
+
+      /*
+       * Open terminal when debugging starts (Optional)
+       * Useful to see console.logs
+       */
+      "console": "internalConsole",
+      "internalConsoleOptions": "neverOpen",
+
+      // Files to exclude from debugger (e.g. call stack)
+      "skipFiles": [
+        // Node.js internal core modules
+        "<node_internals>/**",
+
+        // Ignore all dependencies (optional)
+        "${workspaceFolder}/node_modules/**"
+      ]
+    },
+    {
+      "name": "Run file",
+      "type": "node",
+      "request": "launch",
+
+      "program": "${file}",
 
       /*
        * Path to tsx binary
