--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "drizzle-kit": "^0.30.2",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2",
@@ -28,6 +29,9 @@
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
     "drizzle-seed": "^0.3.0",
-    "openai": "^4.78.1"
+    "he": "^1.2.0",
+    "openai": "^4.78.1",
+    "p-limit": "^6.2.0",
+    "zod": "^3.24.1"
   }
 }
