feat(db-tools): Add db:clear script to clear database records
-  Add new script to clear existing data in the database
-  Implement correct deletion order to respect foreign keys
-  Reset sequence table after clearing data
-  Update db:seed script to handle errors and improve logging

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:reset": "tsx --no-warnings --env-file=.env src/db/reset.ts",
     "db:seed": "tsx --no-warnings --env-file=.env src/db/seed.ts",
+    "db:clear": "tsx --no-warnings --env-file=.env src/db/clear-db-records.ts",
     "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
