--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "db:reset": "tsx --no-warnings --env-file=.env src/db/reset.ts",
     "db:seed": "tsx --no-warnings --env-file=.env src/db/seed.ts",
     "db:clear": "tsx --no-warnings --env-file=.env src/db/clear-db-records.ts",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "test": "evalite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/he": "^1.2.3",
+    "autoevals": "^0.0.118",
     "drizzle-kit": "^0.30.2",
+    "evalite": "^0.8.2",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
+    "vitest": "^3.0.4"
   },
   "packageManager": "pnpm@9.12.3",
   "dependencies": {
